...

                SwiftUI.TextField("", text: $tag)
                    .accentColor(.brandAccent)
                    .font(.custom(Fonts.semiBold, size: 15))
                    .textInputAutocapitalization(.never)
                    .autocorrectionDisabled()
                    .accessibilityIdentifier("AddTagInput")
            }

            Button {
                showSuggestionsSheet = true
            } label: {
                HStack(spacing: 8) {
...
